<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".VerificationActivity">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:src="@mipmap/imagen2"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textColor="@color/principal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/we_will_send_you_an"
            android:textColor="@color/ColorText"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_password"
            android:textColor="#244F79"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/to_this_phone_number"
        android:textColor="@color/ColorText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/card_background"
        android:elevation="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneNumberOfUser"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnOfVerification"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/BUTTOn"
            android:text="@string/next"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>