<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="15dp"
    android:layout_margin="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete message?"
        android:textSize="18sp"
        android:textColor="@color/principal"
        android:textStyle="bold|normal"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|end">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|end"
            >
            <TextView
                android:id="@+id/deleteEveryone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_for_everyone"
                android:textSize="16sp"
                android:textColor="@color/ColorText"
                />
            <TextView
                android:id="@+id/deleteMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_for_me"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/ColorText"
                />
            <TextView
                android:id="@+id/optionCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/ColorText"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>